<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.NewTripFragment">

    <ImageButton
        android:id="@+id/trip_images_button"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/new_images_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_add_photo_alternate_24" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="0.5"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/trip_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="0.5"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_destination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/trip_destination"
                    android:inputType="textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="0.5"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/trip_start_date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="0.5"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/trip_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/trip_end_date"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/trip_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="none"
            android:gravity="start|top"
            android:hint="@string/trip_description"
            android:inputType="text" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_new_trip_button"
            style="?attr/floatingActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/save_new_trip_button"
            app:srcCompat="@drawable/ic_baseline_check_24" />
    </FrameLayout>

</LinearLayout>
