<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dialog_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/search_field_layout"
        android:hint="@string/search_for_users"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="5dp"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        app:startIconContentDescription="@string/search_for_users"
        app:helperText="@string/share_trip_description"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/users_recycler_view">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textIsSelectable="false"
            android:inputType="textMultiLine"
            android:id="@+id/search_field_text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constrainedWidth="true"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@+id/search_field_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/dialog_negative_button" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_negative_button"
        android:layout_margin="5dp"
        android:text="@string/share_trip_cancel"
        app:layout_constraintTop_toBottomOf="@+id/users_recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/dialog_positive_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_positive_button"
        android:layout_margin="5dp"
        android:text="@string/share_trip_confirm"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/dialog_negative_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>